--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -9,7 +9,7 @@ footer {
 }
 
 // Card animations from https://ordinarycoders.com/blog/article/codepen-bootstrap-card-hovers
-.card{
+.CardWithEffect{
   border-radius: 4px;
   box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
     transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
@@ -17,7 +17,7 @@ padding: 14px 36px 14px 36px;
 cursor: pointer;
 }
 
-.card:hover{
+.CardWithEffect:hover{
    transform: scale(1.05);
 box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
 }
